update swagger doc and routing to distinguish between authorized and unauthorized routes
